# psychoKiller

./: .flake8  .gitignore  README.md
.github/workflows/: code_check.yml
back/: .flake8  manage.py  pyproject.toml  requirements.txt  x.json
back/CSV_Files/: questions.csv  test_templates.csv
back/CSV_Files/scriptsToLoadData/: testToPassArgsToTheScript.py
back/psycho/: asgi.py  settings.py  urls.py  wsgi.py
back/psychoApp/: admin.py  admin__list_display.py  apps.py  urls.py
back/psychoApp/fixtures/: SCL90__options.json  SCL90__questions.json  template_test.json  template_test__And__questions_PK_used.csv  terapist.json
back/psychoApp/helpers/: __init__.py  authorization.py
back/psychoApp/migrations/: 0001_initial.py  0002_auto_20201012_2229.py  0002_auto_20201014_2122.py  0002_terapist_username.py  0003_auto_20201008_1824.py  0003_auto_20201012_2243.py
back/psychoApp/models/: __init__.py  answer.py  option.py  patient.py  question.py  template_test.py  terapist.py  test.py  therapist.py
back/psychoApp/serializers/: __init__.py  option_serializer.py  patient_serializer.py  question_serializer.py  templateTest_serializer.py
back/psychoApp/views/: __init__.py  locura.py  patient__view.py  question__serializer.py  question__view.py  test__view.py  test_to_do.py  test_to_do__serializer.py  welcome.py
docs/: pull_request_template.md
front/psycho_front/: package.json
