[tool.poetry]
name = "PsychoKiller-Backend"
version = "0.1.0"
description = "A tool that provides a way to manage and carry out psychology tests"
authors = ["Braian Milocco <braian.uv@hotmail.com>", "Lucas Botteri <lucasbotteri@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.2.10"
Django = "3.1.2"
django-filter = "2.4.0"
djangorestframework = "3.12.1"
importlib-metadata = "2.0.0"
Markdown = "3.2.2"
pytz = "2020.1"
sqlparse = "0.3.1"
zipp = "3.2.0"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

